--- a/src/MMM-HK-Transport-ETA.css
+++ b/src/MMM-HK-Transport-ETA.css
@@ -25,7 +25,7 @@ code {
 	background: #f1f3f4;
 	padding: 2px 6px;
 	border-radius: 3px;
-	font-family: "Monaco", "Menlo", "Ubuntu Mono", monospace;
+	font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
 }
 
 .form-group {
@@ -87,7 +87,7 @@ label {
 }
 
 #jsonOutput {
-	font-family: "Monaco", "Menlo", "Ubuntu Mono", monospace;
+	font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
 	font-size: 14px;
 	line-height: 1.4;
 	resize: vertical;
