--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "@fortawesome/fontawesome-free/css/all.min.css";
+@import 'tailwindcss';
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 /* Copy icon styling */
 .json-output-container {
